syntax = "proto3";

option csharp_namespace = "ServiceB";

import "google/protobuf/empty.proto";
package ServiceC;

service WeatherService {
  rpc SetWeather (WeatherInfo) returns (google.protobuf.Empty);
}

message WeatherInfo {
  string time = 1;
  float temperature = 2;
  string temperature_units = 3;
}
